CoreParser.py
# $ANTLR 3.4 grammars/Core.g 2011-12-12 21:44:05

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *


        
from common import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF=-1
ADD=4
ALTERNATIVE=5
AND=6
APPLICATION=7
ARROW=8
CASE=9
COLON=10
COMBINATOR=11
COMMA=12
COMMENT=13
DEFINITION=14
DIV=15
DOT=16
EQ=17
GT=18
GTE=19
ID=20
IN=21
IS=22
LAMBDA=23
LCURLY=24
LET=25
LETREC=26
LPAREN=27
LT=28
LTE=29
MIN=30
MUL=31
NEQ=32
NOT=33
NUMBER=34
OF=35
OR=36
PACK=37
PROGRAM=38
RCURLY=39
RPAREN=40
SCOLON=41
WHITESPACE=42

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "ADD", "ALTERNATIVE", "AND", "APPLICATION", "ARROW", "CASE", "COLON", 
    "COMBINATOR", "COMMA", "COMMENT", "DEFINITION", "DIV", "DOT", "EQ", 
    "GT", "GTE", "ID", "IN", "IS", "LAMBDA", "LCURLY", "LET", "LETREC", 
    "LPAREN", "LT", "LTE", "MIN", "MUL", "NEQ", "NOT", "NUMBER", "OF", "OR", 
    "PACK", "PROGRAM", "RCURLY", "RPAREN", "SCOLON", "WHITESPACE"
]




class CoreParser(Parser):
    grammarFileName = "grammars/Core.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(CoreParser, self).__init__(input, state, *args, **kwargs)

        self._state.ruleMemo = {}




        self.delegates = []

	self._adaptor = None
	self.adaptor = CommonTreeAdaptor()



    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class program_return(ParserRuleReturnScope):
        def __init__(self):
            super(CoreParser.program_return, self).__init__()

            self.tree = None





    # $ANTLR start "program"
    # grammars/Core.g:58:1: program : ( COMMENT | combinator ) ( SCOLON combinator | COMMENT )* ( SCOLON )? EOF -> ^( PROGRAM ( combinator )+ ) ;
    def program(self, ):
        retval = self.program_return()
        retval.start = self.input.LT(1)

        program_StartIndex = self.input.index()

        root_0 = None

        COMMENT1 = None
        SCOLON3 = None
        COMMENT5 = None
        SCOLON6 = None
        EOF7 = None
        combinator2 = None

        combinator4 = None


        COMMENT1_tree = None
        SCOLON3_tree = None
        COMMENT5_tree = None
        SCOLON6_tree = None
        EOF7_tree = None
        stream_COMMENT = RewriteRuleTokenStream(self._adaptor, "token COMMENT")
        stream_EOF = RewriteRuleTokenStream(self._adaptor, "token EOF")
        stream_SCOLON = RewriteRuleTokenStream(self._adaptor, "token SCOLON")
        stream_combinator = RewriteRuleSubtreeStream(self._adaptor, "rule combinator")
        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 1):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Core.g:59:4: ( ( COMMENT | combinator ) ( SCOLON combinator | COMMENT )* ( SCOLON )? EOF -> ^( PROGRAM ( combinator )+ ) )
                # grammars/Core.g:59:6: ( COMMENT | combinator ) ( SCOLON combinator | COMMENT )* ( SCOLON )? EOF
                pass 
                # grammars/Core.g:59:6: ( COMMENT | combinator )
                alt1 = 2
                LA1_0 = self.input.LA(1)

                if (LA1_0 == COMMENT) :
                    alt1 = 1
                elif (LA1_0 == ID) :
                    alt1 = 2
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 1, 0, self.input)

                    raise nvae


                if alt1 == 1:
                    # grammars/Core.g:59:7: COMMENT
                    pass 
                    COMMENT1 = self.match(self.input, COMMENT, self.FOLLOW_COMMENT_in_program552) 
                    if self._state.backtracking == 0:
                        stream_COMMENT.add(COMMENT1)



                elif alt1 == 2:
                    # grammars/Core.g:59:17: combinator
                    pass 
                    self._state.following.append(self.FOLLOW_combinator_in_program556)
                    combinator2 = self.combinator()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_combinator.add(combinator2.tree)





                # grammars/Core.g:59:29: ( SCOLON combinator | COMMENT )*
                while True: #loop2
                    alt2 = 3
                    LA2_0 = self.input.LA(1)

                    if (LA2_0 == SCOLON) :
                        LA2_1 = self.input.LA(2)

                        if (LA2_1 == ID) :
                            alt2 = 1


                    elif (LA2_0 == COMMENT) :
                        alt2 = 2


                    if alt2 == 1:
                        # grammars/Core.g:59:30: SCOLON combinator
                        pass 
                        SCOLON3 = self.match(self.input, SCOLON, self.FOLLOW_SCOLON_in_program560) 
                        if self._state.backtracking == 0:
                            stream_SCOLON.add(SCOLON3)


                        self._state.following.append(self.FOLLOW_combinator_in_program562)
                        combinator4 = self.combinator()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_combinator.add(combinator4.tree)



                    elif alt2 == 2:
                        # grammars/Core.g:59:50: COMMENT
                        pass 
                        COMMENT5 = self.match(self.input, COMMENT, self.FOLLOW_COMMENT_in_program566) 
                        if self._state.backtracking == 0:
                            stream_COMMENT.add(COMMENT5)



                    else:
                        break #loop2


                # grammars/Core.g:59:60: ( SCOLON )?
                alt3 = 2
                LA3_0 = self.input.LA(1)

                if (LA3_0 == SCOLON) :
                    alt3 = 1
                if alt3 == 1:
                    # grammars/Core.g:59:60: SCOLON
                    pass 
                    SCOLON6 = self.match(self.input, SCOLON, self.FOLLOW_SCOLON_in_program570) 
                    if self._state.backtracking == 0:
                        stream_SCOLON.add(SCOLON6)





                EOF7 = self.match(self.input, EOF, self.FOLLOW_EOF_in_program573) 
                if self._state.backtracking == 0:
                    stream_EOF.add(EOF7)


                # AST Rewrite
                # elements: combinator
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 60:6: -> ^( PROGRAM ( combinator )+ )
                    # grammars/Core.g:60:9: ^( PROGRAM ( combinator )+ )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    ProgramNode(PROGRAM)
                    , root_1)

                    # grammars/Core.g:60:32: ( combinator )+
                    if not (stream_combinator.hasNext()):
                        raise RewriteEarlyExitException()

                    while stream_combinator.hasNext():
                        self._adaptor.addChild(root_1, stream_combinator.nextTree())


                    stream_combinator.reset()

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0





                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 1, program_StartIndex, success)


            pass
        return retval

    # $ANTLR end "program"


    class combinator_return(ParserRuleReturnScope):
        def __init__(self):
            super(CoreParser.combinator_return, self).__init__()

            self.tree = None





    # $ANTLR start "combinator"
    # grammars/Core.g:63:1: combinator : ID ( ID )* IS expression -> ^( COMBINATOR ID ( ID )* expression ) ;
    def combinator(self, ):
        retval = self.combinator_return()
        retval.start = self.input.LT(1)

        combinator_StartIndex = self.input.index()

        root_0 = None

        ID8 = None
        ID9 = None
        IS10 = None
        expression11 = None


        ID8_tree = None
        ID9_tree = None
        IS10_tree = None
        stream_ID = RewriteRuleTokenStream(self._adaptor, "token ID")
        stream_IS = RewriteRuleTokenStream(self._adaptor, "token IS")
        stream_expression = RewriteRuleSubtreeStream(self._adaptor, "rule expression")
        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 2):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Core.g:64:4: ( ID ( ID )* IS expression -> ^( COMBINATOR ID ( ID )* expression ) )
                # grammars/Core.g:64:6: ID ( ID )* IS expression
                pass 
                ID8 = self.match(self.input, ID, self.FOLLOW_ID_in_combinator603) 
                if self._state.backtracking == 0:
                    stream_ID.add(ID8)


                # grammars/Core.g:64:9: ( ID )*
                while True: #loop4
                    alt4 = 2
                    LA4_0 = self.input.LA(1)

                    if (LA4_0 == ID) :
                        alt4 = 1


                    if alt4 == 1:
                        # grammars/Core.g:64:9: ID
                        pass 
                        ID9 = self.match(self.input, ID, self.FOLLOW_ID_in_combinator605) 
                        if self._state.backtracking == 0:
                            stream_ID.add(ID9)



                    else:
                        break #loop4


                IS10 = self.match(self.input, IS, self.FOLLOW_IS_in_combinator608) 
                if self._state.backtracking == 0:
                    stream_IS.add(IS10)


                self._state.following.append(self.FOLLOW_expression_in_combinator610)
                expression11 = self.expression()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_expression.add(expression11.tree)


                # AST Rewrite
                # elements: ID, ID, expression
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 65:6: -> ^( COMBINATOR ID ( ID )* expression )
                    # grammars/Core.g:65:9: ^( COMBINATOR ID ( ID )* expression )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    CombinatorNode(COMBINATOR)
                    , root_1)

                    self._adaptor.addChild(root_1, 
                    IdentifierNode(stream_ID.nextToken())
                    )

                    # grammars/Core.g:65:57: ( ID )*
                    while stream_ID.hasNext():
                        self._adaptor.addChild(root_1, 
                        IdentifierNode(stream_ID.nextToken())
                        )


                    stream_ID.reset();

                    self._adaptor.addChild(root_1, stream_expression.nextTree())

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0





                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 2, combinator_StartIndex, success)


            pass
        return retval

    # $ANTLR end "combinator"


    class expression_return(ParserRuleReturnScope):
        def __init__(self):
            super(CoreParser.expression_return, self).__init__()

            self.tree = None





    # $ANTLR start "expression"
    # grammars/Core.g:68:1: expression : ( LET definitions IN expression -> ^( LET definitions expression ) | LETREC definitions IN expression -> ^( LETREC definitions expression ) | CASE expression OF alternatives -> ^( CASE expression alternatives ) | LAMBDA ( ID )+ DOT expression -> ^( LAMBDA ( ID )+ expression ) | expr1 );
    def expression(self, ):
        retval = self.expression_return()
        retval.start = self.input.LT(1)

        expression_StartIndex = self.input.index()

        root_0 = None

        LET12 = None
        IN14 = None
        LETREC16 = None
        IN18 = None
        CASE20 = None
        OF22 = None
        LAMBDA24 = None
        ID25 = None
        DOT26 = None
        definitions13 = None

        expression15 = None

        definitions17 = None

        expression19 = None

        expression21 = None

        alternatives23 = None

        expression27 = None

        expr128 = None


        LET12_tree = None
        IN14_tree = None
        LETREC16_tree = None
        IN18_tree = None
        CASE20_tree = None
        OF22_tree = None
        LAMBDA24_tree = None
        ID25_tree = None
        DOT26_tree = None
        stream_LETREC = RewriteRuleTokenStream(self._adaptor, "token LETREC")
        stream_IN = RewriteRuleTokenStream(self._adaptor, "token IN")
        stream_LAMBDA = RewriteRuleTokenStream(self._adaptor, "token LAMBDA")
        stream_ID = RewriteRuleTokenStream(self._adaptor, "token ID")
        stream_DOT = RewriteRuleTokenStream(self._adaptor, "token DOT")
        stream_OF = RewriteRuleTokenStream(self._adaptor, "token OF")
        stream_LET = RewriteRuleTokenStream(self._adaptor, "token LET")
        stream_CASE = RewriteRuleTokenStream(self._adaptor, "token CASE")
        stream_expression = RewriteRuleSubtreeStream(self._adaptor, "rule expression")
        stream_alternatives = RewriteRuleSubtreeStream(self._adaptor, "rule alternatives")
        stream_definitions = RewriteRuleSubtreeStream(self._adaptor, "rule definitions")
        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 3):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Core.g:69:4: ( LET definitions IN expression -> ^( LET definitions expression ) | LETREC definitions IN expression -> ^( LETREC definitions expression ) | CASE expression OF alternatives -> ^( CASE expression alternatives ) | LAMBDA ( ID )+ DOT expression -> ^( LAMBDA ( ID )+ expression ) | expr1 )
                alt6 = 5
                LA6 = self.input.LA(1)
                if LA6 == LET:
                    alt6 = 1
                elif LA6 == LETREC:
                    alt6 = 2
                elif LA6 == CASE:
                    alt6 = 3
                elif LA6 == LAMBDA:
                    alt6 = 4
                elif LA6 == ID or LA6 == LPAREN or LA6 == NUMBER or LA6 == PACK:
                    alt6 = 5
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 6, 0, self.input)

                    raise nvae


                if alt6 == 1:
                    # grammars/Core.g:69:6: LET definitions IN expression
                    pass 
                    LET12 = self.match(self.input, LET, self.FOLLOW_LET_in_expression651) 
                    if self._state.backtracking == 0:
                        stream_LET.add(LET12)


                    self._state.following.append(self.FOLLOW_definitions_in_expression653)
                    definitions13 = self.definitions()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_definitions.add(definitions13.tree)


                    IN14 = self.match(self.input, IN, self.FOLLOW_IN_in_expression655) 
                    if self._state.backtracking == 0:
                        stream_IN.add(IN14)


                    self._state.following.append(self.FOLLOW_expression_in_expression657)
                    expression15 = self.expression()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_expression.add(expression15.tree)


                    # AST Rewrite
                    # elements: LET, expression, definitions
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    if self._state.backtracking == 0:
                        retval.tree = root_0
                        if retval is not None:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                        else:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                        root_0 = self._adaptor.nil()
                        # 70:6: -> ^( LET definitions expression )
                        # grammars/Core.g:70:9: ^( LET definitions expression )
                        root_1 = self._adaptor.nil()
                        root_1 = self._adaptor.becomeRoot(
                        LetNode(stream_LET.nextToken())
                        , root_1)

                        self._adaptor.addChild(root_1, stream_definitions.nextTree())

                        self._adaptor.addChild(root_1, stream_expression.nextTree())

                        self._adaptor.addChild(root_0, root_1)




                        retval.tree = root_0




                elif alt6 == 2:
                    # grammars/Core.g:71:6: LETREC definitions IN expression
                    pass 
                    LETREC16 = self.match(self.input, LETREC, self.FOLLOW_LETREC_in_expression682) 
                    if self._state.backtracking == 0:
                        stream_LETREC.add(LETREC16)


                    self._state.following.append(self.FOLLOW_definitions_in_expression684)
                    definitions17 = self.definitions()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_definitions.add(definitions17.tree)


                    IN18 = self.match(self.input, IN, self.FOLLOW_IN_in_expression686) 
                    if self._state.backtracking == 0:
                        stream_IN.add(IN18)


                    self._state.following.append(self.FOLLOW_expression_in_expression688)
                    expression19 = self.expression()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_expression.add(expression19.tree)


                    # AST Rewrite
                    # elements: LETREC, expression, definitions
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    if self._state.backtracking == 0:
                        retval.tree = root_0
                        if retval is not None:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                        else:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                        root_0 = self._adaptor.nil()
                        # 72:6: -> ^( LETREC definitions expression )
                        # grammars/Core.g:72:9: ^( LETREC definitions expression )
                        root_1 = self._adaptor.nil()
                        root_1 = self._adaptor.becomeRoot(
                        LetRecNode(stream_LETREC.nextToken())
                        , root_1)

                        self._adaptor.addChild(root_1, stream_definitions.nextTree())

                        self._adaptor.addChild(root_1, stream_expression.nextTree())

                        self._adaptor.addChild(root_0, root_1)




                        retval.tree = root_0




                elif alt6 == 3:
                    # grammars/Core.g:73:6: CASE expression OF alternatives
                    pass 
                    CASE20 = self.match(self.input, CASE, self.FOLLOW_CASE_in_expression713) 
                    if self._state.backtracking == 0:
                        stream_CASE.add(CASE20)


                    self._state.following.append(self.FOLLOW_expression_in_expression715)
                    expression21 = self.expression()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_expression.add(expression21.tree)


                    OF22 = self.match(self.input, OF, self.FOLLOW_OF_in_expression717) 
                    if self._state.backtracking == 0:
                        stream_OF.add(OF22)


                    self._state.following.append(self.FOLLOW_alternatives_in_expression719)
                    alternatives23 = self.alternatives()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_alternatives.add(alternatives23.tree)


                    # AST Rewrite
                    # elements: CASE, alternatives, expression
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    if self._state.backtracking == 0:
                        retval.tree = root_0
                        if retval is not None:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                        else:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                        root_0 = self._adaptor.nil()
                        # 74:6: -> ^( CASE expression alternatives )
                        # grammars/Core.g:74:9: ^( CASE expression alternatives )
                        root_1 = self._adaptor.nil()
                        root_1 = self._adaptor.becomeRoot(
                        CaseNode(stream_CASE.nextToken())
                        , root_1)

                        self._adaptor.addChild(root_1, stream_expression.nextTree())

                        self._adaptor.addChild(root_1, stream_alternatives.nextTree())

                        self._adaptor.addChild(root_0, root_1)




                        retval.tree = root_0




                elif alt6 == 4:
                    # grammars/Core.g:75:6: LAMBDA ( ID )+ DOT expression
                    pass 
                    LAMBDA24 = self.match(self.input, LAMBDA, self.FOLLOW_LAMBDA_in_expression744) 
                    if self._state.backtracking == 0:
                        stream_LAMBDA.add(LAMBDA24)


                    # grammars/Core.g:75:13: ( ID )+
                    cnt5 = 0
                    while True: #loop5
                        alt5 = 2
                        LA5_0 = self.input.LA(1)

                        if (LA5_0 == ID) :
                            alt5 = 1


                        if alt5 == 1:
                            # grammars/Core.g:75:13: ID
                            pass 
                            ID25 = self.match(self.input, ID, self.FOLLOW_ID_in_expression746) 
                            if self._state.backtracking == 0:
                                stream_ID.add(ID25)



                        else:
                            if cnt5 >= 1:
                                break #loop5

                            if self._state.backtracking > 0:
                                raise BacktrackingFailed


                            eee = EarlyExitException(5, self.input)
                            raise eee

                        cnt5 += 1


                    DOT26 = self.match(self.input, DOT, self.FOLLOW_DOT_in_expression749) 
                    if self._state.backtracking == 0:
                        stream_DOT.add(DOT26)


                    self._state.following.append(self.FOLLOW_expression_in_expression751)
                    expression27 = self.expression()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_expression.add(expression27.tree)


                    # AST Rewrite
                    # elements: expression, LAMBDA, ID
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    if self._state.backtracking == 0:
                        retval.tree = root_0
                        if retval is not None:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                        else:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                        root_0 = self._adaptor.nil()
                        # 76:6: -> ^( LAMBDA ( ID )+ expression )
                        # grammars/Core.g:76:9: ^( LAMBDA ( ID )+ expression )
                        root_1 = self._adaptor.nil()
                        root_1 = self._adaptor.becomeRoot(
                        LambdaNode(stream_LAMBDA.nextToken())
                        , root_1)

                        # grammars/Core.g:76:30: ( ID )+
                        if not (stream_ID.hasNext()):
                            raise RewriteEarlyExitException()

                        while stream_ID.hasNext():
                            self._adaptor.addChild(root_1, 
                            IdentifierNode(stream_ID.nextToken())
                            )


                        stream_ID.reset()

                        self._adaptor.addChild(root_1, stream_expression.nextTree())

                        self._adaptor.addChild(root_0, root_1)




                        retval.tree = root_0




                elif alt6 == 5:
                    # grammars/Core.g:77:6: expr1
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_expr1_in_expression780)
                    expr128 = self.expr1()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, expr128.tree)



                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 3, expression_StartIndex, success)


            pass
        return retval

    # $ANTLR end "expression"


    class alternatives_return(ParserRuleReturnScope):
        def __init__(self):
            super(CoreParser.alternatives_return, self).__init__()

            self.tree = None





    # $ANTLR start "alternatives"
    # grammars/Core.g:80:1: alternatives : alternative ( SCOLON ! alternative )* ;
    def alternatives(self, ):
        retval = self.alternatives_return()
        retval.start = self.input.LT(1)

        alternatives_StartIndex = self.input.index()

        root_0 = None

        SCOLON30 = None
        alternative29 = None

        alternative31 = None


        SCOLON30_tree = None

        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 4):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Core.g:80:13: ( alternative ( SCOLON ! alternative )* )
                # grammars/Core.g:80:15: alternative ( SCOLON ! alternative )*
                pass 
                root_0 = self._adaptor.nil()


                self._state.following.append(self.FOLLOW_alternative_in_alternatives788)
                alternative29 = self.alternative()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    self._adaptor.addChild(root_0, alternative29.tree)


                # grammars/Core.g:80:27: ( SCOLON ! alternative )*
                while True: #loop7
                    alt7 = 2
                    LA7_0 = self.input.LA(1)

                    if (LA7_0 == SCOLON) :
                        LA7_1 = self.input.LA(2)

                        if (self.synpred11_Core()) :
                            alt7 = 1




                    if alt7 == 1:
                        # grammars/Core.g:80:28: SCOLON ! alternative
                        pass 
                        SCOLON30 = self.match(self.input, SCOLON, self.FOLLOW_SCOLON_in_alternatives791)

                        self._state.following.append(self.FOLLOW_alternative_in_alternatives794)
                        alternative31 = self.alternative()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            self._adaptor.addChild(root_0, alternative31.tree)



                    else:
                        break #loop7




                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                success = True

            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 4, alternatives_StartIndex, success)


            pass
        return retval

    # $ANTLR end "alternatives"


    class alternative_return(ParserRuleReturnScope):
        def __init__(self):
            super(CoreParser.alternative_return, self).__init__()

            self.tree = None





    # $ANTLR start "alternative"
    # grammars/Core.g:81:1: alternative : LT NUMBER GT ARROW expression -> ^( ALTERNATIVE NUMBER expression ) ;
    def alternative(self, ):
        retval = self.alternative_return()
        retval.start = self.input.LT(1)

        alternative_StartIndex = self.input.index()

        root_0 = None

        LT32 = None
        NUMBER33 = None
        GT34 = None
        ARROW35 = None
        expression36 = None


        LT32_tree = None
        NUMBER33_tree = None
        GT34_tree = None
        ARROW35_tree = None
        stream_GT = RewriteRuleTokenStream(self._adaptor, "token GT")
        stream_ARROW = RewriteRuleTokenStream(self._adaptor, "token ARROW")
        stream_LT = RewriteRuleTokenStream(self._adaptor, "token LT")
        stream_NUMBER = RewriteRuleTokenStream(self._adaptor, "token NUMBER")
        stream_expression = RewriteRuleSubtreeStream(self._adaptor, "rule expression")
        success = False

        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 5):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval


                # grammars/Core.g:82:4: ( LT NUMBER GT ARROW expression -> ^( ALTERNATIVE NUMBER expression ) )
                # grammars/Core.g:82:6: LT NUMBER GT ARROW expression
                pass 
                LT32 = self.match(self.input, LT, self.FOLLOW_LT_in_alternative807) 
                if self._state.backtracking == 0:
                    stream_LT.add(LT32)


                NUMBER33 = self.match(self.input, NUMBER, self.FOLLOW_NUMBER_in_alternative809) 
                if self._state.backtracking == 0:
                    stream_NUMBER.add(NUMBER33)


                GT34 = self.match(self.input, GT, self.FOLLOW_GT_in_alternative811) 
                if self._state.backtracking == 0:
                    stream_GT.add(GT34)


                ARROW35 = self.match(self.input, ARROW, self.FOLLOW_ARROW_in_alternative813) 
                if self._state.backtracking == 0:
                    stream_ARROW.add(ARROW35)


                self._state.following.append(self.FOLLOW_expression_in_alternative815)
                expression36 = self.expression()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_expression.add(expression36.tree)

